codegen/tests/03-nonexistent-file.rs
use grib_codegen::parameter_codes;

#[parameter_codes(path = "nosuchfile")]
pub enum FooCodes {}

fn main() {}
